CHANGELOG
{"strategies": [{"category": "Personalization", "description": "Tailoring user experiences to individual preferences, needs, and behaviors.", "examples": ["Personalized recommendations for apps, music, movies, and news", "Customizable device settings for display, accessibility, and notifications", "Contextualized content based on location, time, and past interactions", "Personalized home screens and app layouts"]}, {"category": "Content and Entertainment", "description": "Providing engaging and enjoyable content to brighten up users' days.", "examples": ["Streaming services with diverse content libraries and curated playlists", "Games and interactive experiences tailored to interests", "Social media platforms for connecting with friends and family", "Educational and informative content that sparks curiosity and expands knowledge"]}, {"category": "Productivity and Organization", "description": "Helping users manage their time, tasks, and information effectively.", "examples": ["Task management apps and calendars", "Note-taking and reminder tools", "Email clients and productivity suites", "File management and organization tools"]}, {"category": "Connectivity and Communication", "description": "Facilitating easy and meaningful connections with others.", "examples": ["Messaging apps and social networks", "Video calling and conferencing services", "Collaboration tools for working together remotely", "Online communities and forums for sharing interests"]}, {"category": "Well-being and Self-Care", "description": "Supporting users' mental and physical well-being.", "examples": ["Meditation and mindfulness apps", "Fitness tracking and workout apps", "Sleep monitoring and improvement tools", "Journaling and self-reflection apps"]}, {"category": "Accessibility and Inclusivity", "description": "Ensuring that technology is accessible and inclusive for all users.", "examples": ["Assistive technologies for people with disabilities", "Language translation and localization features", "Diverse representation in content and characters", "Tools for managing screen time and digital well-being"]}], "considerations": ["User privacy and data security", "Ethical considerations regarding personalization and algorithmic bias", "Accessibility for all users", "Balance between personalization and user control", "Creating a positive and supportive digital environment"]}# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

## [Unreleased]

## 2023-10-03

### Added

* Support for macOS Sonoma

## 2022-12-02

### Added

* Support for macOS Ventura

### Fixed

* [The warning or failure when installing universal-ctags](https://github.com/thoughtbot/laptop/pull/623)
* [The PostgreSQL Homebrew definition has been fixed](https://github.com/thoughtbot/laptop/pull/612)
* [Return error code for failure sourcing asdf.sh](https://github.com/thoughtbot/laptop/pull/620)
* [Fix for location change of asdf.sh](https://github.com/thoughtbot/laptop/pull/622)

## 2022-03-30

### Changed

* Official support for macOS Monterey on Apple Silicon and Intel and removes official support for prior versions of macOS.
* [Use brew asdk, changes for latest node](https://github.com/thoughtbot/laptop/pull/608)
* [Ignore shellcheck warning SC3043 globally](https://github.com/thoughtbot/laptop/pull/606)
* [Use gpg-suite-no-mail](https://github.com/thoughtbot/laptop/pull/607)
* [Update ctags installation command](https://github.com/thoughtbot/laptop/pull/586)

## 2023-04-24

### Changed

* [Adds Rosetta 2 in case a macbook has M1 architecture](https://github.com/thoughtbot/laptop/pull/628)
@Component({
  selector: 'profile-photo',
  ...
})
export class ProfilePhoto { }
@Component({
  selector: 'user-profile',
  template: `
    <profile-photo />
    <button>Upload a new profile photo</button>`,
  ...,
})
export class UserProfile { }
{"strategies": [{"category": "Climate Action", "description": "Reducing greenhouse gas emissions and mitigating climate change.", "examples": ["Transitioning to renewable energy sources (solar, wind, geothermal)", "Improving energy efficiency in buildings and transportation", "Protecting and restoring forests, which absorb carbon dioxide", "Supporting policies that promote climate action"]}, {"category": "Pollution Reduction", "description": "Minimizing air, water, and soil pollution.", "examples": ["Reducing emissions from factories and vehicles", "Improving waste management and recycling practices", "Protecting water resources from contamination", "Promoting sustainable agriculture and forestry practices"]}, {"category": "Biodiversity Conservation", "description": "Protecting and restoring biodiversity, which is essential for a healthy planet.", "examples": ["Creating and managing protected areas for endangered species", "Promoting sustainable land use practices", "Reducing habitat fragmentation and degradation", "Combating invasive species"]}, {"category": "Sustainable Consumption", "description": "Making responsible choices as consumers to minimize environmental impact.", "examples": ["Buying products from sustainable sources", "Reducing consumption of resources", "Choosing reusable and durable products", "Supporting businesses that prioritize sustainability"]}, {"category": "Education and Awareness", "description": "Raising awareness about environmental issues and inspiring action.", "examples": ["Teaching children about environmental science and stewardship", "Sharing information about sustainable living and climate change", "Supporting environmental advocacy groups and initiatives"]}, {"category": "Technological Innovation", "description": "Developing and deploying technologies that address environmental challenges.", "examples": ["Advanced energy storage systems", "Carbon capture and storage technologies", "Precision agriculture and sustainable farming techniques", "Biodegradable materials and circular economy models"]}, {"category": "International Cooperation", "description": "Working together globally to address transboundary environmental challenges.", "examples": ["Sharing knowledge and best practices", "Developing international agreements and policies", "Providing financial support to developing countries for environmental protection"]}], "challenges": ["Economic and political barriers to implementing solutions", "Shifting consumer behavior and values", "Addressing environmental justice concerns", "Balancing environmental protection with economic development", "Managing complex and interconnected environmental issues"]}
Traceback (most recent call last):
  File "<string>", line 1
    ```json
    ^
SyntaxError: invalid syntax
import sympy
x = sympy.Symbol('x')
solution = sympy.solve(x**2 + 5*x + 6, x)
print(f'{solution=}')
Traceback (most recent call last):
  File "<string>", line 1
    ```python
    ^
SyntaxError: invalid syntax